--- a/InterfaceExample/InterfaceExample.csproj
+++ b/InterfaceExample/InterfaceExample.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Course.cs" />
     <Compile Include="Department.cs" />
     <Compile Include="Iinformation.cs" />
+    <Compile Include="IPrinter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
